; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-read-stop.c_connect_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-read-stop.c_connect_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_handle = common dso_local global i32 0, align 4
@timer_cb = common dso_local global i32 0, align 4
@tcp_handle = common dso_local global i32 0, align 4
@fail_cb = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @connect_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @connect_cb(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 0, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* @timer_cb, align 4
  %10 = call i64 @uv_timer_start(i32* @timer_handle, i32 %9, i32 50, i32 0)
  %11 = icmp eq i64 0, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i64, i64* @fail_cb, align 8
  %15 = trunc i64 %14 to i32
  %16 = load i64, i64* @fail_cb, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i64 @uv_read_start(i32* @tcp_handle, i32 %15, i32 %17)
  %19 = icmp eq i64 0, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @ASSERT(i32 %20)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_timer_start(i32*, i32, i32, i32) #1

declare dso_local i64 @uv_read_start(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
